// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: block;
  grid-area: auto / auto / auto / auto;
}

<div
  class="emotion-0"
>
  Grid Item
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: block;
  grid-area: auto / auto / auto / auto;
}

<span
  class="my-extra-class emotion-0"
>
  Grid Item
</span>
`;
